# Exercises

./: findsum.py  median.py  merge_sort.py  roman_nums.py  verbose_num.py
c/: a.out  monty_hall.c  test.c
c/caesar_cipher/: Makefile  cipher
c/caesar_cipher/src/: cipher.c  main.c  rotlib.h
c/crack/: a.out  main.c
c/matrix/: Makefile  hm  main.c  matrix.c  matrix.h
c/ncurses/: Makefile  main.c  prog
c/sort/: Makefile  arrlib.c  arrlib.h  main.c  sort  sortlib.h
cmake/: LICENSE
cmake/Modules/: FindGLM.cmake  Findasio.cmake  Findxcb.cmake
cpp/: a.out  main.cpp  merge.cpp
cpp/matrix/: Makefile  README  main.cpp  matrix.cpp  matrix.h
cpplua/: CMakeLists.txt  main.c  main.cpp
haskell/: LogAnalysis.hs  adt.hs  creditcard.hs  hanoi.hs
mnist/: .gitignore  main.py  network.pickle  network.py  pyvenv.cfg  tests.py
project_euler/1/: solution.py
project_euler/2/: solution.py
project_euler/236/: problem.py
project_euler/3/: solution.py
project_euler/387/: solution.py
project_euler/4/: solution.py
project_euler/5/: solution.py
project_euler/59/: solution.py
project_euler/6/: solution.py
project_euler/7/: solution.py
py/: diff.py  div8.py  main.py
ruby/: hello_word.rb
